upd: feature set & model

--- a/Amst/Final Assignment/Models.ipynb
+++ b/Amst/Final Assignment/Models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,13 +16,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Feature Selection Summary:\n",
+    "\n",
+    "Benchmark OLS: ['AMD' 'ADS_Index' 'RF' 'CBBTCUSD' 'DJIA' 'MACD_Signal' 'RSI']\n",
+    "\n",
+    "Ridge: ['AMD' 'ADS_Index' 'Mkt-RF' 'SMB' 'HML' 'RMW' 'CMA' 'RF' 'CBBTCUSD' 'DJIA'\n",
+    " 'MACD_Signal' 'RSI']\n",
+    "\n",
+    "Lasso: ['RF' 'CBBTCUSD' 'DJIA' 'MACD_Signal']\n",
+    "\n",
+    "Elastic Net: ['ADS_Index' 'RF' 'CBBTCUSD' 'DJIA' 'MACD_Signal' 'RSI']\n",
+    "\n",
+    "LARS: ['ADS_Index' 'Mkt-RF' 'SMB' 'RMW' 'RF' 'CBBTCUSD' 'DJIA' 'MACD_Signal']\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv('./DataSelected.csv')\n",
-    "target_column = 'NVDA_Log_Return' \n",
+    "target_column = 'NVDA' \n",
     "y = df[target_column]\n",
     "X = df.drop(columns=[target_column])\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0)\n"
@@ -30,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,16 +57,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lasso Best Params: {'alpha': np.float64(0.001)}\n",
-      "Lasso Best Score: -0.22434255156934046\n",
-      "Test MSE with Best Found Parameters: 0.14744746488716604\n"
+      "Lasso Best Params: {'alpha': np.float64(0.0017000000000000001)}\n",
+      "Lasso Best Score: -0.16834712238655897\n",
+      "Test MSE with Best Found Parameters: 0.1699278032812201\n"
      ]
     }
    ],
@@ -81,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -89,8 +107,8 @@
      "output_type": "stream",
      "text": [
       "Ridge Best Params: {'alpha': np.float64(0.1)}\n",
-      "Ridge Best Score: -0.22396397790112138\n",
-      "Test MSE with Best Found Parameters: 0.14931016916267184\n"
+      "Ridge Best Score: -0.16836949428374867\n",
+      "Test MSE with Best Found Parameters: 0.16915805783224286\n"
      ]
     }
    ],
@@ -121,16 +139,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Elastic Net Best Params: {'alpha': np.float64(0.0014563484775012444), 'l1_ratio': np.float64(0.1)}\n",
-      "Elastic Net Best Score: -0.22396922947459932\n",
-      "Test MSE with Best Found Parameters: 0.15008664886357723\n"
+      "Elastic Net Best Params: {'alpha': np.float64(0.006551285568595509), 'l1_ratio': np.float64(0.1)}\n",
+      "Elastic Net Best Score: -0.16812036079581824\n",
+      "Test MSE with Best Found Parameters: 0.1705288136810767\n"
      ]
     }
    ],
@@ -177,7 +202,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
