--- a/Amst/Final Assignment/Models.ipynb
+++ b/Amst/Final Assignment/Models.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Global tools\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import xgboost as xgb\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import Ridge, Lasso, ElasticNet\n",
     "from sklearn.metrics import mean_squared_error, r2_score, make_scorer\n",
@@ -35,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +74,6 @@
    "source": [
     "# Lasso \n",
     "param_grid = {\n",
-    "    #'alpha': [0.001, 0.01, 0.1, 1.0, 10.0] # Lasso Best Params: {'alpha': 0.001}\n",
     "    'alpha': np.linspace(0.0001, 0.1, 1000)\n",
     "    }\n",
     "scorer = make_scorer(mean_squared_error, greater_is_better=False)\n",
@@ -99,16 +99,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ridge Best Params: {'alpha': np.float64(0.1)}\n",
-      "Ridge Best Score: -0.16836949428374867\n",
-      "Test MSE with Best Found Parameters: 0.16915805783224286\n"
+      "Ridge Best Params: {'alpha': np.float64(1.4815666666666667)}\n",
+      "Ridge Best Score: -0.16806571344177768\n",
+      "Test MSE with Best Found Parameters: 0.1704669120292344\n"
      ]
     }
    ],
@@ -116,7 +116,7 @@
     "# Ridge\n",
     "param_grid_ridge = {\n",
     "    #'alpha': [0.01, 0.1, 1.0, 10.0, 100.0] # Ridge Best Params: {'alpha': 0.01}\n",
-    "    'alpha': np.linspace(0.0001, 0.1, 1000)\n",
+    "    'alpha': np.linspace(0.0001, 10, 1000)\n",
     "}\n",
     "scorer = make_scorer(mean_squared_error, greater_is_better=False)\n",
     "ridge = Ridge()\n",
@@ -139,14 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -162,8 +155,6 @@
    "source": [
     "# Elastic Net\n",
     "param_grid_elastic = {\n",
-    "    # 'alpha': [0.01, 0.1, 1.0], # Elastic Net Best Params: {'alpha': 0.01, 'l1_ratio': 0.9}\n",
-    "    # 'l1_ratio': [0.1, 0.5, 0.9]\n",
     "    'alpha': np.logspace(-3, -1, 50), \n",
     "    'l1_ratio': np.linspace(0.1, 1.0, 10)  \n",
     "}\n",
@@ -183,6 +174,97 @@
     "test_predictions = best_elastic.predict(X_test)\n",
     "test_mse = mean_squared_error(y_test, test_predictions)\n",
     "print(\"Test MSE with Best Found Parameters:\", test_mse)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import product\n",
+    "\n",
+    "# Convert to DMatrix\n",
+    "dtrain = xgb.DMatrix(X_train, label=y_train)\n",
+    "dtest = xgb.DMatrix(X_test, label=y_test)\n",
+    "\n",
+    "# Define the parameter grid\n",
+    "param_grid = {\n",
+    "    'learning_rate': [0.01, 0.05, 0.1],\n",
+    "    'max_depth': [3, 5, 7],\n",
+    "    'subsample': [0.8, 1.0],\n",
+    "    'colsample_bytree': [0.8, 1.0],\n",
+    "    'alpha': [0, 0.1, 0.5],\n",
+    "    'lambda': [1, 1.5, 2]\n",
+    "}\n",
+    "\n",
+    "# Generate all combinations of hyperparameters\n",
+    "param_combinations = list(product(\n",
+    "    param_grid['learning_rate'],\n",
+    "    param_grid['max_depth'],\n",
+    "    param_grid['subsample'],\n",
+    "    param_grid['colsample_bytree'],\n",
+    "    param_grid['alpha'],\n",
+    "    param_grid['lambda']\n",
+    "))\n",
+    "\n",
+    "# Cross-validation to find the best parameters\n",
+    "best_params = None\n",
+    "best_rmse = float('inf')\n",
+    "\n",
+    "for params in param_combinations:\n",
+    "    learning_rate, max_depth, subsample, colsample_bytree, alpha, lambda_ = params\n",
+    "    cv_params = {\n",
+    "        'objective': 'reg:squarederror',\n",
+    "        'eval_metric': 'rmse',\n",
+    "        'learning_rate': learning_rate,\n",
+    "        'max_depth': max_depth,\n",
+    "        'subsample': subsample,\n",
+    "        'colsample_bytree': colsample_bytree,\n",
+    "        'alpha': alpha,\n",
+    "        'lambda': lambda_,\n",
+    "    }\n",
+    "    cv_results = xgb.cv(\n",
+    "        cv_params,\n",
+    "        dtrain,\n",
+    "        num_boost_round=200,\n",
+    "        nfold=3,\n",
+    "        early_stopping_rounds=20,\n",
+    "        verbose_eval=False\n",
+    "    )\n",
+    "    mean_rmse = cv_results['test-rmse-mean'].min()\n",
+    "    if mean_rmse < best_rmse:\n",
+    "        best_rmse = mean_rmse\n",
+    "        best_params = cv_params\n",
+    "\n",
+    "print(\"Best Parameters:\", best_params)\n",
+    "print(\"Best RMSE from CV:\", best_rmse)\n",
+    "\n",
+    "# Train the model with the best parameters\n",
+    "final_model = xgb.train(best_params, dtrain, num_boost_round=200)\n",
+    "\n",
+    "# Make predictions on the test set\n",
+    "y_pred = final_model.predict(dtest)\n",
+    "\n",
+    "# Evaluate the model\n",
+    "test_mse = mean_squared_error(y_test, y_pred)\n",
+    "test_rmse = test_mse ** 0.5\n",
+    "\n",
+    "print(f\"Test MSE with Best Parameters: {test_mse:.4f}\")\n",
+    "print(f\"Test RMSE with Best Parameters: {test_rmse:.4f}\")\n",
+    "\n",
+    "# Feature importance\n",
+    "importance = final_model.get_score(importance_type='weight')\n",
+    "importance_df = pd.DataFrame(list(importance.items()), columns=['Feature', 'Importance']).sort_values(by='Importance', ascending=False)\n",
+    "\n",
+    "# Save feature importance\n",
+    "importance_csv_path = './FeatureImportance_ManualTuning.csv'\n",
+    "importance_df.to_csv(importance_csv_path, index=False)\n",
+    "print(f\"Feature importance saved to {importance_csv_path}\")\n",
+    "\n",
+    "# Display top features\n",
+    "print(\"\\nTop Features:\")\n",
+    "print(importance_df)"
    ]
   }
  ],
