upd: XGBoost. 不要跑这个代码 XGB要跑16分钟

--- a/Amst/Final Assignment/Models.ipynb
+++ b/Amst/Final Assignment/Models.ipynb
@@ -178,9 +178,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Parameters: {'objective': 'reg:squarederror', 'eval_metric': 'rmse', 'learning_rate': 0.05, 'max_depth': 7, 'subsample': 0.8, 'colsample_bytree': 0.8, 'alpha': 0, 'lambda': 1}\n",
+      "Best RMSE from CV: 0.2015352477010817\n",
+      "Test MSE with Best Parameters: 0.0369\n",
+      "Test RMSE with Best Parameters: 0.1920\n",
+      "Feature importance saved to ./FeatureImportance_ManualTuning.csv\n",
+      "\n",
+      "Top Features:\n",
+      "       Feature  Importance\n",
+      "0          AMD      1636.0\n",
+      "1          RSI      1171.0\n",
+      "3     CBBTCUSD      1097.0\n",
+      "4         DJIA      1040.0\n",
+      "5  MACD_Signal       734.0\n",
+      "6    ADS_Index       622.0\n",
+      "2           RF       107.0\n"
+     ]
+    }
+   ],
    "source": [
     "from itertools import product\n",
     "\n",
