--- a/Amst/Final Assignment/Models.ipynb
+++ b/Amst/Final Assignment/Models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -174,6 +174,94 @@
     "test_predictions = best_elastic.predict(X_test)\n",
     "test_mse = mean_squared_error(y_test, test_predictions)\n",
     "print(\"Test MSE with Best Found Parameters:\", test_mse)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\ttrain-rmse:0.91975\ttest-rmse:0.86793\n",
+      "[10]\ttrain-rmse:0.36919\ttest-rmse:0.41270\n",
+      "[20]\ttrain-rmse:0.17254\ttest-rmse:0.27891\n",
+      "[30]\ttrain-rmse:0.09723\ttest-rmse:0.23665\n",
+      "[40]\ttrain-rmse:0.06638\ttest-rmse:0.22133\n",
+      "[50]\ttrain-rmse:0.05153\ttest-rmse:0.21325\n",
+      "[60]\ttrain-rmse:0.04248\ttest-rmse:0.20941\n",
+      "[70]\ttrain-rmse:0.03636\ttest-rmse:0.20727\n",
+      "[80]\ttrain-rmse:0.03216\ttest-rmse:0.20570\n",
+      "[90]\ttrain-rmse:0.02858\ttest-rmse:0.20499\n",
+      "[100]\ttrain-rmse:0.02602\ttest-rmse:0.20400\n",
+      "[110]\ttrain-rmse:0.02395\ttest-rmse:0.20318\n",
+      "[120]\ttrain-rmse:0.02230\ttest-rmse:0.20265\n",
+      "[130]\ttrain-rmse:0.02068\ttest-rmse:0.20237\n",
+      "[140]\ttrain-rmse:0.01945\ttest-rmse:0.20173\n",
+      "[150]\ttrain-rmse:0.01869\ttest-rmse:0.20128\n",
+      "[160]\ttrain-rmse:0.01796\ttest-rmse:0.20103\n",
+      "[170]\ttrain-rmse:0.01725\ttest-rmse:0.20079\n",
+      "[180]\ttrain-rmse:0.01662\ttest-rmse:0.20051\n",
+      "[190]\ttrain-rmse:0.01600\ttest-rmse:0.20029\n",
+      "[199]\ttrain-rmse:0.01563\ttest-rmse:0.20011\n",
+      "Test Mean Squared Error: 0.0400\n",
+      "Test RMSE: 0.2001\n",
+      "Feature importance saved to ./FeatureImportance.csv\n",
+      "\n",
+      "Top Features:\n",
+      "       Feature  Importance\n",
+      "0          AMD       504.0\n",
+      "3     CBBTCUSD       473.0\n",
+      "1          RSI       459.0\n",
+      "4         DJIA       458.0\n",
+      "5  MACD_Signal       410.0\n",
+      "6    ADS_Index       400.0\n",
+      "2           RF        54.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "dtrain = xgb.DMatrix(X_train, label=y_train)\n",
+    "dtest = xgb.DMatrix(X_test, label=y_test)\n",
+    "\n",
+    "# Define XGBoost parameters\n",
+    "params = {\n",
+    "    'objective': 'reg:squarederror',\n",
+    "    'eval_metric': 'rmse',\n",
+    "    'learning_rate': 0.1,\n",
+    "    'max_depth': 5,\n",
+    "    'subsample': 0.8,\n",
+    "    'colsample_bytree': 0.8,\n",
+    "    'alpha': 0.1,\n",
+    "    'lambda': 1.0\n",
+    "}\n",
+    "\n",
+    "# Train the XGBoost model\n",
+    "evals = [(dtrain, 'train'), (dtest, 'test')]\n",
+    "model = xgb.train(params, dtrain, num_boost_round=200, evals=evals, early_stopping_rounds=20, verbose_eval=10)\n",
+    "\n",
+    "# Make predictions on the test set\n",
+    "y_pred = model.predict(dtest)\n",
+    "\n",
+    "# Evaluate the model\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "print(f\"Test Mean Squared Error: {mse:.4f}\")\n",
+    "print(f\"Test RMSE: {mse ** 0.5:.4f}\")\n",
+    "\n",
+    "# Feature importance\n",
+    "importance = model.get_score(importance_type='weight')\n",
+    "importance_df = pd.DataFrame(list(importance.items()), columns=['Feature', 'Importance']).sort_values(by='Importance', ascending=False)\n",
+    "\n",
+    "# Save the feature importance to a CSV file\n",
+    "importance_csv_path = './FeatureImportance.csv'\n",
+    "importance_df.to_csv(importance_csv_path, index=False)\n",
+    "print(f\"Feature importance saved to {importance_csv_path}\")\n",
+    "\n",
+    "# Display top features\n",
+    "print(\"\\nTop Features:\")\n",
+    "print(importance_df)\n"
    ]
   },
   {
