--- a/Amst/Final Assignment/The Kernel Density.ipynb
+++ b/Amst/Final Assignment/The Kernel Density.ipynb
@@ -89,7 +89,9 @@
     "summary_statistics = all_stocks_data.describe()\n",
     "\n",
     "print(\"Summary Statistics of the Training Period:\")\n",
-    "print(summary_statistics)\n"
+    "print(summary_statistics)\n",
+    "\n",
+    "summary_statistics.to_csv(\"stock_summary_statistics.csv\")"
    ]
   }
  ],
