--- a/Amst/Final Assignment/Random Forest.ipynb
+++ b/Amst/Final Assignment/Random Forest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,14 +53,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 5 folds for each of 432 candidates, totalling 2160 fits\n"
+      "Fitting 10 folds for each of 432 candidates, totalling 4320 fits\n"
      ]
     },
     {
@@ -481,22 +481,24 @@
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-3);\n",
        "}\n",
-       "</style><div id=\"sk-container-id-2\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>GridSearchCV(cv=5, estimator=RandomForestRegressor(random_state=42), n_jobs=-1,\n",
+       "</style><div id=\"sk-container-id-2\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>GridSearchCV(cv=10, estimator=RandomForestRegressor(random_state=42), n_jobs=-1,\n",
        "             param_grid={&#x27;max_depth&#x27;: [None, 10, 20, 30],\n",
        "                         &#x27;max_features&#x27;: [&#x27;sqrt&#x27;, &#x27;log2&#x27;, None],\n",
        "                         &#x27;min_samples_leaf&#x27;: [1, 2, 4],\n",
        "                         &#x27;min_samples_split&#x27;: [2, 5, 10],\n",
        "                         &#x27;n_estimators&#x27;: [100, 200, 300, 500]},\n",
-       "             scoring=&#x27;neg_mean_squared_error&#x27;, verbose=2)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-label-container\"><div class=\"sk-label fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-4\" type=\"checkbox\" ><label for=\"sk-estimator-id-4\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>GridSearchCV</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.6/modules/generated/sklearn.model_selection.GridSearchCV.html\">?<span>Documentation for GridSearchCV</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></div></label><div class=\"sk-toggleable__content fitted\"><pre>GridSearchCV(cv=5, estimator=RandomForestRegressor(random_state=42), n_jobs=-1,\n",
+       "             scoring=&#x27;neg_mean_squared_error&#x27;, verbose=2)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-label-container\"><div class=\"sk-label fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-4\" type=\"checkbox\" ><label for=\"sk-estimator-id-4\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>GridSearchCV</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.6/modules/generated/sklearn.model_selection.GridSearchCV.html\">?<span>Documentation for GridSearchCV</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></div></label><div class=\"sk-toggleable__content fitted\"><pre>GridSearchCV(cv=10, estimator=RandomForestRegressor(random_state=42), n_jobs=-1,\n",
        "             param_grid={&#x27;max_depth&#x27;: [None, 10, 20, 30],\n",
        "                         &#x27;max_features&#x27;: [&#x27;sqrt&#x27;, &#x27;log2&#x27;, None],\n",
        "                         &#x27;min_samples_leaf&#x27;: [1, 2, 4],\n",
        "                         &#x27;min_samples_split&#x27;: [2, 5, 10],\n",
        "                         &#x27;n_estimators&#x27;: [100, 200, 300, 500]},\n",
-       "             scoring=&#x27;neg_mean_squared_error&#x27;, verbose=2)</pre></div> </div></div><div class=\"sk-parallel\"><div class=\"sk-parallel-item\"><div class=\"sk-item\"><div class=\"sk-label-container\"><div class=\"sk-label fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-5\" type=\"checkbox\" ><label for=\"sk-estimator-id-5\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>best_estimator_: RandomForestRegressor</div></div></label><div class=\"sk-toggleable__content fitted\"><pre>RandomForestRegressor(max_features=&#x27;sqrt&#x27;, n_estimators=500, random_state=42)</pre></div> </div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-6\" type=\"checkbox\" ><label for=\"sk-estimator-id-6\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>RandomForestRegressor</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.6/modules/generated/sklearn.ensemble.RandomForestRegressor.html\">?<span>Documentation for RandomForestRegressor</span></a></div></label><div class=\"sk-toggleable__content fitted\"><pre>RandomForestRegressor(max_features=&#x27;sqrt&#x27;, n_estimators=500, random_state=42)</pre></div> </div></div></div></div></div></div></div></div></div>"
+       "             scoring=&#x27;neg_mean_squared_error&#x27;, verbose=2)</pre></div> </div></div><div class=\"sk-parallel\"><div class=\"sk-parallel-item\"><div class=\"sk-item\"><div class=\"sk-label-container\"><div class=\"sk-label fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-5\" type=\"checkbox\" ><label for=\"sk-estimator-id-5\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>best_estimator_: RandomForestRegressor</div></div></label><div class=\"sk-toggleable__content fitted\"><pre>RandomForestRegressor(max_depth=20, max_features=&#x27;sqrt&#x27;, n_estimators=200,\n",
+       "                      random_state=42)</pre></div> </div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-6\" type=\"checkbox\" ><label for=\"sk-estimator-id-6\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>RandomForestRegressor</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.6/modules/generated/sklearn.ensemble.RandomForestRegressor.html\">?<span>Documentation for RandomForestRegressor</span></a></div></label><div class=\"sk-toggleable__content fitted\"><pre>RandomForestRegressor(max_depth=20, max_features=&#x27;sqrt&#x27;, n_estimators=200,\n",
+       "                      random_state=42)</pre></div> </div></div></div></div></div></div></div></div></div>"
       ],
       "text/plain": [
-       "GridSearchCV(cv=5, estimator=RandomForestRegressor(random_state=42), n_jobs=-1,\n",
+       "GridSearchCV(cv=10, estimator=RandomForestRegressor(random_state=42), n_jobs=-1,\n",
        "             param_grid={'max_depth': [None, 10, 20, 30],\n",
        "                         'max_features': ['sqrt', 'log2', None],\n",
        "                         'min_samples_leaf': [1, 2, 4],\n",
@@ -505,7 +507,7 @@
        "             scoring='neg_mean_squared_error', verbose=2)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +517,7 @@
     "    estimator=rf,\n",
     "    param_grid=param_grid_rf,\n",
     "    scoring='neg_mean_squared_error',\n",
-    "    cv=5,  \n",
+    "    cv=10,  \n",
     "    n_jobs=-1, \n",
     "    verbose=2\n",
     ")\n",
@@ -524,58 +526,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "best_rf = grid_search_rf.best_estimator_\n",
     "best_params = grid_search_rf.best_params_\n",
     "best_score = -grid_search_rf.best_score_  \n",
+    "y_test_pred = best_rf.predict(X_test)\n",
     "\n",
-    "y_pred = best_rf.predict(X_test)\n",
-    "\n",
-    "test_rmse = np.sqrt(mean_squared_error(y_test, y_pred))\n",
-    "\n",
-    "feature_importances = best_rf.feature_importances_\n",
-    "feature_importance_df = pd.DataFrame({\n",
-    "    'Feature': X.columns,\n",
-    "    'Importance': feature_importances\n",
-    "}).sort_values(by='Importance', ascending=False)"
+    "test_rmse = np.sqrt(mean_squared_error(y_test, y_test_pred))\n",
+    "y_train_pred = best_rf.predict(X_train)\n",
+    "train_mse = mean_squared_error(y_train, y_train_pred)\n",
+    "train_rmse = np.sqrt(train_mse)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feature_importances = best_rf.feature_importances_\n",
+    "feature_importance_df = pd.DataFrame({\n",
+    "    'Feature': X.columns,\n",
+    "    'Importance': feature_importances\n",
+    "}).sort_values(by='Importance', ascending=False)\n",
+    "\n",
+    "feature_importance_csv_path = './GridSearch_RandomForest_FeatureImportance.csv'\n",
+    "feature_importance_df.to_csv(feature_importance_csv_path, index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best Parameters: {'max_depth': None, 'max_features': 'sqrt', 'min_samples_leaf': 1, 'min_samples_split': 2, 'n_estimators': 500}\n",
-      "Best RMSE from CV: 0.1876\n",
-      "Test RMSE with Best Parameters: 0.1084\n",
+      "Best Parameters: {'max_depth': 20, 'max_features': 'sqrt', 'min_samples_leaf': 1, 'min_samples_split': 2, 'n_estimators': 200}\n",
+      "Best RMSE from CV: 0.1701\n",
+      "Train MSE: 0.0039\n",
+      "Train RMSE: 0.0626\n",
+      "Test RMSE with Best Parameters: 0.1129\n",
       "Feature importance saved to ./GridSearch_RandomForest_FeatureImportance.csv\n",
       "\n",
       "Top Features:\n",
       "       Feature  Importance\n",
-      "3     CBBTCUSD    0.339136\n",
-      "4         DJIA    0.276217\n",
-      "0          AMD    0.160641\n",
-      "5  MACD_Signal    0.099398\n",
-      "6    ADS_Index    0.048262\n"
+      "3     CBBTCUSD    0.327949\n",
+      "4         DJIA    0.268052\n",
+      "0          AMD    0.170956\n",
+      "5  MACD_Signal    0.104068\n",
+      "6    ADS_Index    0.050529\n"
      ]
     }
    ],
    "source": [
-    "feature_importance_csv_path = './GridSearch_RandomForest_FeatureImportance.csv'\n",
-    "feature_importance_df.to_csv(feature_importance_csv_path, index=False)\n",
     "print(\"Best Parameters:\", best_params)\n",
     "print(f\"Best RMSE from CV: {np.sqrt(best_score):.4f}\")\n",
+    "print(f\"Train MSE: {train_mse:.4f}\")\n",
+    "print(f\"Train RMSE: {train_rmse:.4f}\")\n",
     "print(f\"Test RMSE with Best Parameters: {test_rmse:.4f}\")\n",
     "print(f\"Feature importance saved to {feature_importance_csv_path}\")\n",
     "print(\"\\nTop Features:\")\n",
-    "print(feature_importance_df.head())"
+    "print(feature_importance_df.head())\n"
    ]
   }
  ],
